# robot_ws

./: .gitignore  README.md  auth_google.py  frames_2025-04-10_15.43.16.gv  startup.sh  status.json
src/json_file_watcher/: CMakeLists.txt  package.xml
src/json_file_watcher/src/: json_file_watcher.cpp
src/tracer_ros2/navigation_interfaces/: CMakeLists.txt  package.xml
src/tracer_ros2/navigation_server/: CMakeLists.txt  package.xml
src/tracer_ros2/navigation_server/src/: navigate.cpp  navigate_test.cpp  navigate_to_pose_client.cpp  navigate_to_pose_service.cpp
src/xarm_ros2/aruco_grab/: CMakeLists.txt  camera_calibration_result.yaml  camera_calibration_result2.yaml  package.xml
src/xarm_ros2/aruco_grab/src/: aruco_detect  aruco_grab.cpp  boxhole_grab.cpp
src/xarm_ros2/lite6_handeye/: CMakeLists.txt
src/xarm_ros2/lite6_handeye/config/: calibration_camera_eih_001.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_173319/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_173616/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_173943/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_175545/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_175545/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181457/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181457/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181642/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181642/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181807/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181807/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181853/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_181853/images/: calibration_1_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_204337/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_204337/images/: calibration_10_pose.yaml  calibration_11_pose.yaml  calibration_12_pose.yaml  calibration_13_pose.yaml  calibration_14_pose.yaml  calibration_15_pose.yaml  calibration_16_pose.yaml  calibration_17_pose.yaml  calibration_18_pose.yaml  calibration_19_pose.yaml  calibration_1_pose.yaml  calibration_20_pose.yaml  calibration_21_pose.yaml  calibration_2_pose.yaml  calibration_3_pose.yaml  calibration_4_pose.yaml  calibration_5_pose.yaml  calibration_6_pose.yaml  calibration_7_pose.yaml  calibration_8_pose.yaml  calibration_9_pose.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_204735/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_204735/images/: calibration_10_pose.yaml  calibration_11_pose.yaml  calibration_12_pose.yaml  calibration_13_pose.yaml  calibration_14_pose.yaml  calibration_15_pose.yaml  calibration_16_pose.yaml  calibration_17_pose.yaml  calibration_18_pose.yaml  calibration_19_pose.yaml  calibration_1_pose.yaml  calibration_20_pose.yaml  calibration_21_pose.yaml  calibration_22_pose.yaml  (+8 more)
src/xarm_ros2/lite6_handeye/data/calibration/20250303_205013/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250303_205811/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250307_154458/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250307_164548/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250307_165156/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250311_183455/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250311_184328/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250311_185301/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250311_185821/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/data/calibration/20250311_190805/: camera_calibration_result.yaml  corners_in_base_frame.yaml
src/xarm_ros2/lite6_handeye/src/: lite6_handeye.cpp  lite6_handeye2.cpp  lite6_handeye3.cpp
src/xarm_ros2/medicine_grabber/: CMakeLists.txt  package.xml
src/xarm_ros2/medicine_grabber/include/medicine_grabber/: medicine_grabber.hpp
src/xarm_ros2/medicine_grabber/src/: medicine_grabber.cpp
web/: app.py  (+1 more)
(+734 files in other folders)
